test/npm/haxe/openfl/errors/RangeErrorTest.hx
package openfl.errors;


class RangeErrorTest { public static function __init__ () { Mocha.describe ("Haxe | RangeError", function () {
	
	
	Mocha.it ("new", function () {
		
		// TODO: Confirm functionality
		
		var rangeError = new RangeError ();
		Assert.notEqual (rangeError, null);
		
	});
	
	
}); }}